# patchtest2

./: .pre-commit-config.yaml  README.md  architecture.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/patchtest2/: mbox.py  parser.py  patchtest.py  patterns.py  repo.py  results.py
src/patchtest2/suites/: core.py  merge.py  oe.py
src/patchtest2/tests/: core.py  oe.py  patchtest.py  results.py
tests/: test_patterns.py  test_results.py
tests/selftests/: selftest
