[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchtest2"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Trevor Gamblin", email = "tgamblin@baylibre.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "GitPython",
  "pyparsing",
  "unidiff",
]

[project.scripts]
patchtest = "patchtest2.patchtest:run"

[project.urls]
Documentation = "https://github.com/Trevor Gamblin/patchtest2#readme"
Issues = "https://github.com/Trevor Gamblin/patchtest2/issues"
Source = "https://github.com/Trevor Gamblin/patchtest2"

[tool.hatch.version]
path = "src/patchtest2/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/patchtest2 tests}"

[tool.coverage.run]
source_pkgs = ["patchtest2", "tests"]
branch = true
parallel = true
omit = [
  "src/patchtest2/__about__.py",
]

[tool.coverage.paths]
patchtest2 = ["src/patchtest2", "*/patchtest2/src/patchtest2"]
tests = ["tests", "*/patchtest2/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
